--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=admin
 spring.jpa.show-sql=true
 pring.jpa.proerties.hibernate.format_sql=true
 
+
+server.error.include-stacktrace=never
+
