--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ pring.jpa.proerties.hibernate.format_sql=true
 
 server.error.include-stacktrace=never
 
+api.security.token.secret=${JWT_SECRET:12345678}
